# uvicorn-gunicorn-docker

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  backup.travis.yml  docker-compose.build.yml  pyproject.toml  release-notes.md
.github/: FUNDING.yml  dependabot.yml
docker-images/: gunicorn_conf.py  python3.10-alpine3.14.dockerfile  python3.10-alpine3.15.dockerfile  python3.10-slim.dockerfile  python3.10.dockerfile  python3.11-rc-slim.dockerfile  python3.11-slim.dockerfile  python3.11.dockerfile  python3.12-slim.dockerfile  python3.12.dockerfile  python3.6-alpine3.8.dockerfile  python3.6.dockerfile  python3.7-alpine3.8.dockerfile  python3.7.dockerfile  python3.8-alpine3.10.dockerfile  python3.8-alpine3.12.dockerfile  python3.8-armv7.dockerfile  python3.8-slim.dockerfile  python3.8-ubuntu.dockerfile  python3.8.16-slim.dockerfile  python3.8.dockerfile  python3.9-alpine.dockerfile  python3.9-alpine3.12.dockerfile  python3.9-alpine3.13.dockerfile  python3.9-alpine3.14.dockerfile  python3.9-slim.dockerfile  python3.9.dockerfile  requirements.txt  start-reload.sh  start.sh
dockerfiles/: python3.6-alpine3.11.dockerfile  python3.6.dockerfile  python3.7-alpine3.11.dockerfile  python3.7.dockerfile  python3.8.dockerfile
python3.6/: Dockerfile  entrypoint.sh
python3.6-alpine3.8/: Dockerfile  entrypoint.sh
python3.7/: Dockerfile  gunicorn_conf.py  start.sh
python3.7-alpine3.8/: Dockerfile  gunicorn_conf.py  start-reload.sh  start.sh
python3.7-slim/: Dockerfile  gunicorn_conf.py
python3.8-alpine3.10/: Dockerfile
python3.8-alpine3.11/: Dockerfile  start.sh
(+55 files in other folders)
